--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   vprodb:
     build:
       context: ./Docker-files/db
-    image: ifeanyisam/vprofiledb
+    image: balumahendra/vprodb
     container_name: vprodb
     ports:
       - "3306:3306"
@@ -28,7 +28,7 @@ services:
   vproapp:
     build:
       context: ./Docker-files/app
-    image: ifeanyisam/vprofileapp
+    image: balumahendra/vproapp
     container_name: vproapp
     ports:
       - "8080:8080"
@@ -38,7 +38,7 @@ services:
   vproweb:
     build:
       context: ./Docker-files/web
-    image: ifeanyisam/vprofileweb
+    image: balumahendra/vproweb
     container_name: vproweb
     ports:
       - "80:80"
